--- a/Flashcards/en.lproj/MainStoryboard.storyboard
+++ b/Flashcards/en.lproj/MainStoryboard.storyboard
@@ -4,66 +4,58 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Title-->
+        <!--Add Flash Card View Controller - Title-->
         <scene sceneID="Zop-1z-LWs">
             <objects>
-                <viewController id="gf8-nK-hpC" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="gf8-nK-hpC" customClass="AddFlashCardViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MgA-KX-o3L">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="0.0" width="540" height="620"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="llF-bA-mKl">
-                                <rect key="frame" x="35" y="480" width="699" height="388"/>
+                            <navigationBar contentMode="scaleToFill" id="fob-tM-1rR">
+                                <rect key="frame" x="0.0" y="0.0" width="540" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Add Flashcard" id="aUh-Uy-GjI">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Lhu-p1-n7A">
+                                            <connections>
+                                                <action selector="cancelButtonPressed:" destination="gf8-nK-hpC" id="ajo-Rr-SYh"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="QcN-Iw-nzw">
+                                            <connections>
+                                                <action selector="saveButtonPressed:" destination="gf8-nK-hpC" id="cbS-gS-tMZ"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Front Side" textAlignment="center" minimumFontSize="17" background="flashcardImage.jpg" id="6Tl-6m-Pol">
+                                <rect key="frame" x="31" y="61" width="478" height="258"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7Ct-8B-kjx">
-                                <rect key="frame" x="35" y="52" width="699" height="388"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Back Side" textAlignment="center" minimumFontSize="17" background="flashcardImage.jpg" id="ptL-kM-YCJ">
+                                <rect key="frame" x="31" y="333" width="478" height="258"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="c9A-0J-8ty">
-                                <rect key="frame" x="669" y="892" width="65" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="SAVE">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="saveButtonPressed:" destination="gf8-nK-hpC" eventType="touchUpInside" id="bmO-hi-Iam"/>
-                                </connections>
-                            </button>
+                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="gkL-Yb-ZAs"/>
                     <connections>
-                        <outlet property="bottomView" destination="llF-bA-mKl" id="o4A-5O-jj4"/>
-                        <outlet property="saveButton" destination="c9A-0J-8ty" id="OzL-Wl-qM9"/>
-                        <outlet property="topView" destination="7Ct-8B-kjx" id="KSg-wN-1MG"/>
+                        <outlet property="back" destination="ptL-kM-YCJ" id="LDC-dh-TYJ"/>
+                        <outlet property="front" destination="6Tl-6m-Pol" id="a45-tN-eTI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KML-hy-0dT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-6" y="-1534"/>
+            <point key="canvasLocation" x="1028" y="-402"/>
         </scene>
         <!--Flashcard Deck View Controller - Flashcards-->
         <scene sceneID="keD-Bv-kCT">
@@ -212,7 +204,13 @@
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="w9Y-bo-tEn"/>
+                    <navigationItem key="navigationItem" id="w9Y-bo-tEn">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="MMM-Of-vge">
+                            <connections>
+                                <segue destination="gf8-nK-hpC" kind="modal" identifier="addFlashcard" modalPresentationStyle="formSheet" id="Gh9-D4-KtW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="editButton" destination="XTK-OG-hMv" id="pVe-vS-ZPF"/>
                         <outlet property="flashCardView" destination="nVH-3g-UMy" id="Yl0-59-3p7"/>
@@ -245,6 +243,15 @@
         <image name="flashcardImage.jpg" width="272" height="185"/>
     </resources>
     <classes>
+        <class className="AddFlashCardViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddFlashCardViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelButtonPressed:"/>
+                <relationship kind="action" name="saveButtonPressed:"/>
+                <relationship kind="outlet" name="back" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="front" candidateClass="UITextField"/>
+            </relationships>
+        </class>
         <class className="DeckCell" superclassName="UICollectionViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DeckCell.h"/>
             <relationships>
@@ -259,6 +266,7 @@
                 <relationship kind="action" name="editButtonPressed:"/>
                 <relationship kind="action" name="flipButtonPressed:" candidateClass="UIButton"/>
                 <relationship kind="action" name="lazyModePressed:"/>
+                <relationship kind="action" name="unwindFromAddFlashcard:"/>
                 <relationship kind="outlet" name="editButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="flashCardView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="lazyModeButton" candidateClass="UIButton"/>
@@ -283,18 +291,6 @@
         </class>
         <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="saveButtonPressed:"/>
-                <relationship kind="outlet" name="bottomView" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="topView" candidateClass="UIButton"/>
-            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
